<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:lineSpacingExtra="8sp"
        android:text="CROP CONNECT"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="15dp"
        android:focusable="true"
        android:hint="Enter Name"
        android:singleLine="false"
        android:textColorHighlight="#4ab944"
        android:textColorHint="#4ab944" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/abc" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText"
        android:layout_below="@+id/editText"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#4ab944" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:text="Attempts Left:"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textview"
        android:layout_toRightOf="@+id/textview"
        android:text="Anjali, Rupsa"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        style="?attr/actionBarPopupTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_toStartOf="@+id/textview"
        android:background="@android:color/holo_green_light"
        android:text="login" />

    <Button
        android:id="@+id/button2"
        style="@android:style/Holo.SegmentedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_toEndOf="@+id/regbutton"
        android:layout_toRightOf="@+id/regbutton"
        android:background="@android:color/holo_green_light"
        android:text="Cancel" />

    <Button
        android:id="@+id/regbutton"
        style="@android:style/Holo.SegmentedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/textview"
        android:layout_alignStart="@+id/textview"
        android:background="@android:color/holo_green_light"
        android:text="Register"
        android:onClick="regOnClick"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Anjali,Rupsa 1.0" />

</RelativeLayout>