<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#51b3f187"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:background="#e8e8e7"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginLeft="25dp"
                android:text="Register Now"
                android:textColor="#2582C5"
                android:textSize="18sp"

                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:gravity="right"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000000"

                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"

            android:orientation="vertical">


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="#f3f3f3"
                android:hint="name"
                android:paddingLeft="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="email"
                android:paddingLeft="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="mobile"
                android:paddingLeft="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="address"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:text="What are you?"
                android:textColor="#2582C5"
                android:textSize="18sp"
                android:textStyle="bold"

                />


            <RadioGroup
                android:id="@+id/custype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Farmer" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Customer" />
        </RadioGroup>

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="102dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:onClick="regOnClickzz"
                android:text="submit"
                android:textColor="#000000" />

        </LinearLayout>


    </LinearLayout>






</ScrollView>
